k8s/yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    tier: db-tier
spec:
# container 是數組 用 -來區分
  containers:
    - name: postgres
      image: postgres
