k8s/yaml/pv& pvc.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: my-pv
spec:
  capacity:
    storage: 1Gi #存储容量
  accessModes:
    - ReadWriteOnce # 表示可以由一个节点挂载为读写模式。
  persistentVolumeReclaimPolicy: Retain #示在 PersistentVolume 被删除后保留其数据。
  storageClassName: standard # 指定了存储类名称，这里是 standard
  hostPath:
    path: /mnt/data # 主机路径作为存储


## ReadWriteOnce，表示可以由一个节点挂载为读写模式。 
#ReadOnlyMany (ROX)：
#该卷可以被多个节点挂载为只读模式。
#多个节点可以同时挂载为只读模式。
#ReadWriteMany (RWX)：
#该卷可以被多个节点同时挂载为读写模式。
#多个节点可以同时挂载为读写模式。

##Retain：
##当 PersistentVolume 被删除时，底层存储资源不会被释放，数据会被保留。
##管理者需要手动处理释放底层存储资源。
##Delete：
##当 PersistentVolume 被删除时，底层存储资源会被释放，数据也会被删除。
##Kubernetes 会自动释放底层存储资源，但数据会被永久删除。

------- PVC
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: my-pvc
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi




-------- using in pod

apiVersion: v1
kind: Pod
metadata:
  name: mypod
spec:
  containers:
    - name: myfrontend
      image: nginx
      volumeMounts:
      - mountPath: "/var/www/html"
        name: mypd
  volumes:
    - name: mypd
      persistentVolumeClaim:
        claimName: myclaim
